force-app/main/default/objects/TestParent__c/TestParent__c.object-meta.xml
<CustomObject>
    <label>TestParent</label>
    <nameField>
        <label>TestParent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestParent</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>