force-app/main/default/objects/TestParent__c/fields/AllAmountChild__c.field-meta.xml
<CustomField>
    <fullName>AllAmountChild__c</fullName>
    <label>AllAmountChild</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>