force-app/main/default/objects/TestParent__c/fields/LastChildCreate_Update__c.field-meta.xml
<CustomField>
    <fullName>LastChildCreate_Update__c</fullName>
    <label>LastChildCreate/Update</label>
    <type>Date</type>
</CustomField>