force-app/main/default/objects/TestParent__c/fields/TotalChildAmt__c.field-meta.xml
<CustomField>
    <fullName>TotalChildAmt__c</fullName>
    <label>TotalChildAmt</label>
    <summarizedField>TestChild__c.Amount__c</summarizedField>
    <summaryForeignKey>TestChild__c.TestParent__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>